# tintz-publisher

./: .gitignore  CMakeLists.txt
include/: AbstractPublisherBackend.h  CBZPublisher.h  ComicBook.h  Image.h  PublisherFactory.h
src/: CBZPublisher.cpp  main.cpp
